# 30DaysOfAI

./: 01_connect_to_snowflake.py  README.md
app/: 02_hello_cortex.py  03_write_stream.py  pyproject.toml  streamlit_app.py
app/.streamlit/: config.toml
app/pages/: 00_home.py  01_connect_to_snowflake.py  02_hello_cortex.py  03_write_stream.py  04_caching_app.py  05_post_generator.py  06_post_generator_v2.py  07_post_generator_v3.py  08_chat_elements.py  09_session_state.py  10_first_chatbot.py  11_display_chat_history.py  12_streaming_response.py  13_adding_system_prompt.py  14_adding_avatars_and_error_handling.py
